MModify in parties front-end

--- a/fitlifepro/src/app/app.component.html
+++ b/fitlifepro/src/app/app.component.html
@@ -1,1 +1,67 @@
 <router-outlet></router-outlet>
+<!--<h1>{{message}}</h1>-->
+
+<!--<ul>-->
+<!--  <li *ngFor="let fruit of fruits">{{ fruit }}</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+<!--  <li *ngFor="let list of passage">{{passage}}</li>-->
+<!--</ul>-->
+
+<!--&lt;!&ndash; Form dial search &ndash;&gt;-->
+<!--<input type="text" placeholder="Rechercher les  fruit" (input)="search($event)" />-->
+<!--<ul>-->
+<!--  <li *ngFor="let result of searchResults">{{ result }}</li>-->
+<!--</ul>-->
+
+<!--&lt;!&ndash; Form dial delete &ndash;&gt;-->
+<!--<ul>-->
+<!--  <li *ngFor="let fruit of fruits; let i = index">-->
+<!--    {{ fruit }}-->
+<!--    <button (click)="delete(i)">Supprimer</button>-->
+<!--  </li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+<!--  <li *ngFor="let fruit of fruits; let i = index">-->
+<!--    {{ fruit }}-->
+<!--    <button (click)="startEditing(i)">Modifier</button>-->
+<!--  </li>-->
+<!--</ul>-->
+
+<!--&lt;!&ndash; Form dial update &ndash;&gt;-->
+<!--<div *ngIf="editIndex !== null">-->
+<!--  <input type="text" [(ngModel)]="editableFruit" />-->
+<!--  <button (click)="update()">Sauvegarder</button>-->
+<!--</div>-->
+
+<!--&lt;!&ndash; Form dial affichage &ndash;&gt;-->
+<!--<ul>-->
+<!--  <li *ngFor="let fruit of afficherItems()">-->
+<!--    {{ fruit }}-->
+<!--  </li>-->
+<!--</ul>-->
+
+
+<!--&lt;!&ndash; Form dial add &ndash;&gt;-->
+
+<!--&lt;!&ndash; Input field bach tkhdem item jdida &ndash;&gt;-->
+<!--<input type="text" [(ngModel)]="newFruit" placeholder="Saisir un fruit" />-->
+
+<!--&lt;!&ndash; Button dial Ajouter &ndash;&gt;-->
+<!--<button (click)="ajouterItem()">Ajouter</button>-->
+
+<!--&lt;!&ndash; Liste dial fruits &ndash;&gt;-->
+<!--<ul>-->
+<!--  <li *ngFor="let fruit of fruits">-->
+<!--    {{ fruit }}-->
+<!--  </li>-->
+<!--</ul>-->
+
+
+
+
+
+
+
