--- a/fitlifepro/src/app/component/login/login.component.css
+++ b/fitlifepro/src/app/component/login/login.component.css
@@ -4,10 +4,14 @@
 
 .login-page {
   background-color: #fff;
-  display: flex;
   flex-direction: column;
   overflow: hidden;
-  padding: 113px 47px;
+  padding: 200px ;
+  margin: 10px;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  margin-block: -150px;
+
 }
 
 .header {
