--- a/fitlifepro/src/app/component/sign-up/sign-up.component.css
+++ b/fitlifepro/src/app/component/sign-up/sign-up.component.css
@@ -4,8 +4,13 @@
   flex-direction: column;
   overflow: hidden;
   align-items: center;
-  padding: 90px 47px;
+  padding: 100px 100px;
   min-height: 100vh;
+
+  margin: 10px;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  margin-block: -20px;
 }
 
 .header {
